<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background"
    tools:context=".FragmentHome">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/welcome"
        android:textColor="@color/gray"
        android:textSize="15sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/enterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/default_name"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/bell"
        android:contentDescription="@string/notification_bell"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/icon_bell" />

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape_search_text"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@id/bell">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30sp"
            android:src="@drawable/icon_search"
            android:contentDescription="@string/search_icon"
            android:layout_margin="12sp" />

        <EditText
            android:id="@+id/searchTerm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/shape_blank"
            android:hint="@string/search_books"
            android:inputType="text"
            android:minHeight="48dp" />

        <!-- Vertical Divider -->
        <View
            android:layout_width="1dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:paddingVertical="15sp"
            android:background="@color/gray" />


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/mic_icon"
            android:src="@drawable/icon_mic"
            android:layout_margin="10dp"
            android:layout_gravity="center" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_bar"
        android:layout_marginStart="20dp"
        android:clipToPadding="false"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        tools:listitem="@layout/book_item_home"
        android:overScrollMode="never"
        android:paddingHorizontal="8dp" />

    <TextView
        android:id="@+id/statusMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="90dp"
        android:text="@string/loading"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"/>


</RelativeLayout>