<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/bookCard"
        android:layout_width="105dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <ImageView
            android:id="@+id/bookImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/book_image"
            android:scaleType="fitXY"
            android:src="@drawable/book_mahabharata"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bookTitle"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_author"
            android:textSize="13sp" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="3.7"
            android:stepSize="0.5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/free"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="0.5"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/removeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/remove_from_wishlist"
            android:src="@drawable/icon_remove" />

        <TextView
            android:id="@+id/exploreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="85dp"
            android:background="@drawable/shape_square"
            android:contentDescription="@string/view"
            android:elevation="4dp"
            android:hapticFeedbackEnabled="true"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:text="@string/view"
            android:textColor="@color/white"
            android:textSize="13sp" />

    </LinearLayout>
</LinearLayout>