<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/page_background"
    tools:context=".PageEditProfile">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/edit_profile"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/icon_male_profile" />

        <LinearLayout
            android:id="@+id/enterNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/shape_edittext"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/user_image"
                android:src="@drawable/icon_user" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/shape_blank"
                android:hint="@string/change_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/enterUsernameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enterNameLayout"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_edittext"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/user_image"
                android:src="@drawable/icon_user" />

            <EditText
                android:id="@+id/editUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/shape_blank"
                android:hint="@string/change_username"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/selectGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_below="@id/enterUsernameLayout"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_edittext"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/user_image"
                android:src="@drawable/icon_user" />

            <Spinner
                android:id="@+id/spinnerGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/shape_blank"
                android:minHeight="48dp"
                android:popupBackground="@drawable/shape_edittext"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="12dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/drop_down_arrow"
                android:src="@drawable/icon_downarrow" />

        </LinearLayout>

        <TextView
            android:id="@+id/updateProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectGender"
            android:clickable="true"
            android:focusable="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_get_started"
            android:elevation="4dp"
            android:fontFamily="@font/poppins_bold"
            android:hapticFeedbackEnabled="true"
            android:paddingHorizontal="50dp"
            android:paddingVertical="10dp"
            android:text="@string/update_profile"
            android:textColor="@color/page_background"
            android:textSize="20sp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>